ARM64: P89990AA1: Enable NTFS3 and QCACLD driver

--- a/arch/arm64/configs/P89990AA1-perf_defconfig
+++ b/arch/arm64/configs/P89990AA1-perf_defconfig
@@ -518,6 +518,7 @@ CONFIG_ASHMEM=y
 CONFIG_ION=y
 CONFIG_ION_SYSTEM_HEAP=y
 CONFIG_ION_POOL_AUTO_REFILL=y
+CONFIG_QCA_CLD_WLAN=m
 CONFIG_QPNP_REVID=y
 CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_NDP_BAM=y
@@ -649,9 +650,7 @@ CONFIG_OVERLAY_FS=y
 CONFIG_INCREMENTAL_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
-CONFIG_NTFS_FS=y
-CONFIG_NTFS_DEBUG=y
-CONFIG_NTFS_RW=y
+CONFIG_NTFS3_FS=y
 CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
