--- a/techpack/audio/asoc/codecs/Kbuild
+++ b/techpack/audio/asoc/codecs/Kbuild
@@ -247,6 +247,7 @@ ifeq ($(KERNEL_BUILD), 1)
 	obj-y	+= wcd934x/
 	obj-y	+= wcd937x/
 	obj-y	+= wcd938x/
+	obj-y   += aw882xx/
 	obj-y	+= bolero/
 	obj-y	+= rouleur/
 	obj-y	+= wsa883x/
