--- a/arch/arm64/configs/P89990GA1-perf_defconfig
+++ b/arch/arm64/configs/P89990GA1-perf_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-Grass-perf"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
@@ -50,13 +50,10 @@ CONFIG_PROFILING=y
 CONFIG_HOTPLUG_SIZE_BITS=29
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_BENGAL=y
-#CONFIG_ARCH_KHAJE is not set
 CONFIG_ARCH_KHAJE_WIFIONLY=y
-CONFIG_ARCH_SCUBA=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_SECCOMP=y
-CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_HARDEN_BRANCH_PREDICTOR=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
@@ -91,6 +88,7 @@ CONFIG_CRYPTO_GHASH_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
+CONFIG_LTO_CLANG=y
 CONFIG_PANIC_ON_REFCOUNT_ERROR=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
@@ -268,7 +266,6 @@ CONFIG_BTFM_SLIM_WCN3990=y
 CONFIG_CFG80211=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
-# CONFIG_NFC_NQ is not set
 CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 # CONFIG_FW_CACHE is not set
@@ -283,6 +280,7 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_QSEECOM=y
 CONFIG_UID_SYS_STATS=y
+CONFIG_MEMORY_STATE_TIME=y
 CONFIG_FPR_FPC=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
@@ -295,6 +293,7 @@ CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_QCOM=y
 CONFIG_SCSI_UFS_CRYPTO=y
 CONFIG_SCSI_UFS_CRYPTO_QTI=y
+CONFIG_MI_UFS_FFU=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
@@ -318,7 +317,6 @@ CONFIG_VETH=y
 CONFIG_RMNET=y
 # CONFIG_NET_VENDOR_ROCKER is not set
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
-CONFIG_PHYLIB=y
 CONFIG_PPP=y
 CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_DEFLATE=y
@@ -332,7 +330,6 @@ CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_USB_RTL8152=y
 CONFIG_USB_USBNET=y
-CONFIG_USB_NET_AX8817X=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_CNSS_GENL=y
@@ -343,20 +340,13 @@ CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_OPENSHORT_TEST=y
 CONFIG_TOUCHSCREEN_HIMAX_CHIPSET=y
-CONFIG_TOUCHSCREEN_HIMAX_IC_HX83102=y
-CONFIG_TOUCHSCREEN_HIMAX_INSPECT=y
-CONFIG_TOUCHSCREEN_HIMAX_DEBUG=y
-CONFIG_TOUCHSCREEN_HIMAX_INCELL=y
-# CONFIG_TOUCHSCREEN_HIMAX_ONCELL is not set
 CONFIG_TOUCHSCREEN_HIMAX_COMMON=y
-## //+bug692121,shenwenbin.wt,MOD,20211014,update new firmware VER 1
-# CONFIG_TOUCHSCREEN_HIMAX_EMBEDDED_FIRMWARE=y
-## //-bug692121,shenwenbin.wt,MOD,20211014,update new firmware VER 1
-## //+bug692121,shenwenbin.wt,MOD,20211019,bringup 2sc NOV TP
+CONFIG_TOUCHSCREEN_HIMAX_IC_HX83102=y
+CONFIG_TOUCHSCREEN_HIMAX_DEBUG=y
+CONFIG_TOUCHSCREEN_HIMAX_INSPECT=y
+CONFIG_TOUCHSCREEN_OPENSHORT_TEST=y
 CONFIG_TOUCHSCREEN_NT36xxx_HOSTDL_SPI=y
-## //-bug692121,shenwenbin.wt,MOD,20211019,bringup 2sc NOV TP
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
@@ -366,10 +356,8 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_DEVMEM is not set
 CONFIG_SERIAL_MSM_GENI=y
 CONFIG_SERIAL_MSM_GENI_HALF_SAMPLING=y
-# OAK+382, aishuyi.wt, mod, 20211129, serial port open to debug
 CONFIG_SERIAL_MSM_GENI_CONSOLE=y
 CONFIG_TTY_PRINTK=y
-# OAK-382, aishuyi.wt, mod, 20211129, serial port open to debug
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM_LEGACY=y
 CONFIG_DIAG_CHAR=y
@@ -389,22 +377,13 @@ CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_RESET_QCOM=y
 CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
+CONFIG_BATTERY_BQ27XXX=y
 CONFIG_QPNP_SMB5=y
 CONFIG_QPNP_SMBLITE=y
-#+bug 692121, lishuwen.wt,ADD,20211106, add charger bring up
-# CONFIG_SMB1355_SLAVE_CHARGER is not set
-CONFIG_TCPC_CLASS=y
-CONFIG_WT_CHARGER=y
-CONFIG_TCPC_RT1711H=y
-CONFIG_USB_POWER_DELIVERY=y
 CONFIG_QPNP_QG=y
-CONFIG_BATTERY_BQ27XXX=y
-CONFIG_BATTERY_BQ27XXX_I2C=y
-CONFIG_BATTERY_BQ27XXX_HDQ=y
-CONFIG_CHARGE_WT6670F=y
 CONFIG_CHARGE_BQ2589X=y
 CONFIG_CHARGE_SGM4151X=y
-#-bug 692121, lishuwen.wt,ADD,20211106, add charger bring up
+CONFIG_WT_CHARGER=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_STATISTICS=y
 CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=10000
@@ -427,6 +406,8 @@ CONFIG_QTI_RPM_SMD_COOLING_DEVICE=y
 CONFIG_QTI_CPU_ISOLATE_COOLING_DEVICE=y
 CONFIG_QTI_LMH_CPU_VDD_COOLING_DEVICE=y
 CONFIG_QTI_CX_IPEAK_COOLING_DEVICE=y
+CONFIG_WATCHDOG=y
+CONFIG_SOFT_WATCHDOG=y
 CONFIG_MFD_I2C_PMIC=y
 CONFIG_MFD_SPMI_PMIC=y
 CONFIG_REGULATOR=y
@@ -452,11 +433,11 @@ CONFIG_VIDEO_V4L2_VIDEOBUF2_CORE=y
 CONFIG_DRM=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
+CONFIG_LCD_BIAS_OCP2138=y
+CONFIG_BACKLIGHT_SGM37604=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
-CONFIG_BACKLIGHT_SGM37604=y
-CONFIG_LCD_BIAS_OCP2138=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
@@ -504,7 +485,9 @@ CONFIG_USB_CONFIGFS_F_QDSS=y
 CONFIG_USB_CONFIGFS_F_GSI=y
 CONFIG_USB_CONFIGFS_F_MTP=y
 CONFIG_USB_CONFIGFS_F_PTP=y
-CONFIG_TYPEC=y
+CONFIG_TCPC_CLASS=y
+CONFIG_USB_POWER_DELIVERY=y
+CONFIG_TCPC_RT1711H=y
 CONFIG_USB_PD_POLICY=y
 CONFIG_QPNP_USB_PDPHY=y
 CONFIG_MMC=y
@@ -513,9 +496,9 @@ CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
+CONFIG_MMC_SDHCI_BH201=y
 CONFIG_MMC_CQHCI_CRYPTO=y
 CONFIG_MMC_CQHCI_CRYPTO_QTI=y
-CONFIG_MMC_SDHCI_BH201=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_CLASS_FLASH=y
@@ -537,6 +520,7 @@ CONFIG_ASHMEM=y
 CONFIG_ION=y
 CONFIG_ION_SYSTEM_HEAP=y
 CONFIG_ION_POOL_AUTO_REFILL=y
+CONFIG_QCA_CLD_WLAN=y
 CONFIG_QPNP_REVID=y
 CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_NDP_BAM=y
@@ -648,6 +632,9 @@ CONFIG_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_QCOM_KGSL=y
+CONFIG_WT_BOOTLOADER_LOG=y
+CONFIG_WT_BOOT_REASON=y
+CONFIG_WT_SYSTEM_MONITOR=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
@@ -657,10 +644,6 @@ CONFIG_FS_ENCRYPTION=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_FS_VERITY=y
 CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
-CONFIG_EXFAT_FS=y
-CONFIG_NTFS_FS=y
-CONFIG_NTFS_DEBUG=y
-CONFIG_NTFS_RW=y
 CONFIG_QUOTA=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_QFMT_V2=y
@@ -669,6 +652,8 @@ CONFIG_OVERLAY_FS=y
 CONFIG_INCREMENTAL_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
+CONFIG_NTFS3_FS=y
+CONFIG_EXFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_EFIVAR_FS=y
@@ -687,6 +672,9 @@ CONFIG_SECURITY_SMACK=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_TWOFISH=y
+CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_LZ4HC=y
+CONFIG_CRYPTO_ZSTD=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
@@ -703,19 +691,3 @@ CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_DEBUG_LIST=y
 CONFIG_IPC_LOGGING=y
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-CONFIG_CORESIGHT_DYNAMIC_REPLICATOR=y
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_DUMMY=y
-CONFIG_CORESIGHT_REMOTE_ETM=y
-CONFIG_CORESIGHT_TGU=y
-CONFIG_WT_BOOTLOADER_LOG=y
-CONFIG_WT_BOOT_REASON=y
-CONFIG_WT_SYSTEM_MONITOR=y
-CONFIG_MI_UFS_FFU=y
